--- a/docs/plots.ipynb
+++ b/docs/plots.ipynb
@@ -965,6 +965,298 @@
     "    else:\n",
     "        plt.show()  # Show the plot if no path is provided"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81187e9d-4157-43e3-8807-3180034ec846",
+   "metadata": {},
+   "source": [
+    "# Random code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d722506-d107-4118-b899-45f37bbff3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime,timedelta \n",
+    "from codegreen_core.tools.loadshift_time import predict_now\n",
+    "\n",
+    "country_code = \"DK\"\n",
+    "est_runtime_hour = 10\n",
+    "est_runtime_min = 0\n",
+    "now = datetime.now()\n",
+    "hard_finish_date = now + timedelta(days=1)\n",
+    "criteria = \"percent_renewable\"\n",
+    "per_renewable = 50 \n",
+    "\n",
+    "time = predict_now(country_code,\n",
+    "                   est_runtime_hour,\n",
+    "                   est_runtime_min,\n",
+    "                   hard_finish_date,\n",
+    "                   criteria,\n",
+    "                   per_renewable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a2bad9b-54e3-49d6-9e60-1459bed6fdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a38545-7637-4b85-8909-380c055be866",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5aff34db-90c6-44e3-8f34-da25cddbb721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import  codegreen_core.tools.loadshift_time as lt\n",
+    "from datetime import datetime\n",
+    "#.predict_now(country: str, estimated_runtime_hours: int, estimated_runtime_minutes: int, hard_finish_date: datetime, criteria: str = 'percent_renewable', percent_renewable: int = 50) → tuple¶\n",
+    "import importlib as il\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7e683133-f749-45ad-81aa-2070438e3816",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Solar  Wind Onshore  totalRenewable        startTimeUTC    total  \\\n",
+      "group_id                                                                        \n",
+      "0            19.00       6522.00         6541.00 2024-10-17 00:00:00  21415.0   \n",
+      "1            28.75       6856.50         6885.25 2024-10-17 01:00:00  21133.0   \n",
+      "2            14.75       7203.00         7217.75 2024-10-17 02:00:00  21462.0   \n",
+      "3             6.25       7858.00         7864.25 2024-10-17 03:00:00  22678.0   \n",
+      "4             8.00       8553.75         8561.75 2024-10-17 04:00:00  23606.0   \n",
+      "5             4.00       9131.75         9135.75 2024-10-17 05:00:00  26592.0   \n",
+      "6           239.00       9597.00         9836.00 2024-10-17 06:00:00  28516.0   \n",
+      "7          3113.25      10064.75        13178.00 2024-10-17 07:00:00  32156.0   \n",
+      "8          7772.75      10718.00        18490.75 2024-10-17 08:00:00  35431.0   \n",
+      "9         10802.75      11390.50        22193.25 2024-10-17 09:00:00  38104.0   \n",
+      "10        12314.50      12010.25        24324.75 2024-10-17 10:00:00  38726.0   \n",
+      "11        13104.75      12582.75        25687.50 2024-10-17 11:00:00  38602.0   \n",
+      "12        12890.50      13399.75        26290.25 2024-10-17 12:00:00  38259.0   \n",
+      "13        12471.00      13733.75        26204.75 2024-10-17 13:00:00  37948.0   \n",
+      "14        11842.50      14147.75        25990.25 2024-10-17 14:00:00  37622.0   \n",
+      "15        10115.75      14011.75        24127.50 2024-10-17 15:00:00  37137.0   \n",
+      "16         5307.25      13686.75        18994.00 2024-10-17 16:00:00  35333.0   \n",
+      "17         1099.00      13200.75        14299.75 2024-10-17 17:00:00  32930.0   \n",
+      "18          254.75      12733.00        12987.75 2024-10-17 18:00:00  32864.0   \n",
+      "19          177.75      12595.00        12772.75 2024-10-17 19:00:00  31379.0   \n",
+      "20          152.25      12219.75        12372.00 2024-10-17 20:00:00  29632.0   \n",
+      "21          119.50      11960.25        12079.75 2024-10-17 21:00:00  27503.0   \n",
+      "\n",
+      "          percent_renewable  posix_timestamp  \n",
+      "group_id                                      \n",
+      "0                        31       1729123200  \n",
+      "1                        33       1729126800  \n",
+      "2                        34       1729130400  \n",
+      "3                        35       1729134000  \n",
+      "4                        36       1729137600  \n",
+      "5                        34       1729141200  \n",
+      "6                        34       1729144800  \n",
+      "7                        41       1729148400  \n",
+      "8                        52       1729152000  \n",
+      "9                        58       1729155600  \n",
+      "10                       63       1729159200  \n",
+      "11                       67       1729162800  \n",
+      "12                       69       1729166400  \n",
+      "13                       69       1729170000  \n",
+      "14                       69       1729173600  \n",
+      "15                       65       1729177200  \n",
+      "16                       54       1729180800  \n",
+      "17                       43       1729184400  \n",
+      "18                       40       1729188000  \n",
+      "19                       41       1729191600  \n",
+      "20                       42       1729195200  \n",
+      "21                       44       1729198800  \n",
+      "[47.90909090909091, 69, 69, 69, 67]\n",
+      "2024-10-16 22:02:49.201321+00:00 2024-10-16 22:00:00+00:00 2024-10-17 01:45:00+00:00\n",
+      "alternative = 8\n",
+      "returning requested timeslot\n",
+      "2024-10-16 22:02:49.202761+00:00 2024-10-16 22:00:00+00:00 2024-10-17 01:45:00+00:00\n",
+      "alternative = 8\n",
+      "returning optimum\n",
+      "2024-10-16 22:02:49.203919+00:00 2024-10-16 22:00:00+00:00 2024-10-17 01:45:00+00:00\n",
+      "alternative = 8\n",
+      "returning optimum\n",
+      "2024-10-16 22:02:49.204898+00:00 2024-10-16 22:00:00+00:00 2024-10-17 01:45:00+00:00\n",
+      "alternative = 8\n",
+      "returning optimum\n",
+      "2024-10-16 22:02:49.206103+00:00 2024-10-16 22:00:00+00:00 2024-10-17 01:45:00+00:00\n",
+      "alternative = 8\n",
+      "returning optimum\n",
+      "[(1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0), (1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0), (1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0), (1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0), (1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0)]\n",
+      "0\n",
+      "(1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = lt.predict_now(\"ES\",3,45,datetime(2024,10,18),\"optimal_percent_renewable\",50)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4c6bf90b-7174-47f7-a546-1b0dbaae1dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1729152000.0, <Message.OPTIMAL_TIME: 'OPTIMAL_TIME'>, 60.0, 47.91)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b8fd01d4-dcbb-4577-860c-19539a0dc8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'codegreen_core.tools.loadshift_time' from '/Users/svj/projects/codegreen/core/codegreen_core/tools/loadshift_time.py'>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "il.reload(lt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "8357b582-7cdd-4114-899a-0c62f080f5eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime,timedelta \n",
+    "import codegreen_core.tools.carbon_emission as ce \n",
+    "\n",
+    "class Job:\n",
+    "    def __init__(self,name,start_time,duration_min,server):\n",
+    "        self.name = name\n",
+    "        self.start_time = start_time\n",
+    "        self.end_time = start_time + timedelta(minutes=duration_min)\n",
+    "        self.duration_min = duration_min\n",
+    "    def __repr__(self):\n",
+    "        return f\"<Job: {self.name}, Start: {self.start_time}, End: {self.end_time}>\"\n",
+    "    def get_ce(self,plot=False):\n",
+    "        \"\"\"carbon emissions of this job. can only be calcualted for jobs in the past\"\"\"\n",
+    "        if datetime.now() < self.end_time:\n",
+    "            self.ce = ce.compute_ce()\n",
+    "        else:\n",
+    "            print(\"Carbon emissions can only be calcualted for jobs in the past since future energy data is not available\")\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "\n",
+    "class Server :\n",
+    "    def __init__(self,location,number_core,memory_gb,power_draw_core=15.8,power_draw_mem=0.3725,usage_factor_core=1,power_usage_efficiency=1.6):\n",
+    "        self.location = location\n",
+    "        self.number_core = number_core\n",
+    "        self.memory_gb = memory_gb\n",
+    "        self.power_draw_core = power_draw_core\n",
+    "        self.power_draw_mem = power_draw_mem\n",
+    "        self.usage_factor_core = usage_factor_core\n",
+    "        self.power_usage_efficiency = power_usage_efficiency\n",
+    "        self.jobs = {}\n",
+    "    def new_job(self,name,start_time,duration_min):\n",
+    "        if name not in self.jobs.keys():\n",
+    "            self.jobs[name] = Job(name,start_time,duration_min,self)\n",
+    "        else:\n",
+    "            print(\"job name already exists\")    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "61f52aca-defe-453b-8269-8e3a7434e37b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 =  Server(\"DE\",16,254)\n",
+    "s1.new_job(\"j1\",datetime(2024,6,1),1200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "97063977-eb54-4e46-979f-490da9c371a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e87f15bf-7124-45cc-bc9e-1d6824243962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Job: j1, Start: 2024-06-01 00:00:00, End: 2024-06-01 20:00:00>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.jobs[\"j1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "8f05708d-c1f0-4367-9f7f-ebe727b55ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "ce1 = s1.jobs[\"j1\"].get_ce()\n",
+    "print(ce1)"
+   ]
   }
  ],
  "metadata": {
