new ver with env vars allowed

--- a/docs/Tutorials.ipynb
+++ b/docs/Tutorials.ipynb
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "6f171076-f624-419e-8a9c-e5a4eab3b69d",
    "metadata": {},
    "outputs": [
@@ -1417,8 +1417,6 @@
    ],
    "source": [
     "from codegreen_core.tools.carbon_emission import plot_ce_jobs\n",
-    "from codegreen_core.tools.carbon_intensity import compute_ci \n",
-    "\n",
     "server = {\n",
     "    \"country\":\"DE\",\n",
     "    \"number_core\":8,\n",
@@ -1430,8 +1428,7 @@
     "    {\"start_time\": option3, \"runtime_minutes\": runtime*60},    \n",
     "]\n",
     "\n",
-    "\n",
-    "plot_ce_jobs(server,jobs)\n"
+    "plot_ce_jobs(server,jobs)"
    ]
   },
   {
